修改littlepaper格式为php,导入小票总数
Signed-off-by: Electrical <Electrical>

--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@
 						<div class="intro-lead-in">欢迎来到电气工段共享空间!</div>
 						<div class="intro-heading">It's Nice To Meet You</div>
 					</div>
-					<a class="btn btn-1 btn-sm" href="code/littlepaper-e.html">（电气）小票录入</a>
-					<a class="btn btn-1 btn-sm" href="code/littlepaper-g.html">（机械化）小票录入</a>
-                    <a class="btn btn-1 btn-sm" href="code/littlepaper-l.html">（激光焊）小票录入</a>
-					</br><a class="btn btn-1 btn-sm" href="code/NAS_check.php">小票查询</a>
+					<a class="btn btn-1 btn-sm" href="code/littlepaper.php">小票录入</a>
+					<a class="btn btn-1 btn-sm" href="code/NAS_check.php">小票查询</a>
 				</div>
 			</div>
 		</div>
@@ -112,7 +110,6 @@
 			<div class="container">
 				<div class="row">
 					<blockquote>For a successful technology, reality must take precedence over public relations, for Nature cannot be fooled.</blockquote>
-					<a class="btn btn-1 btn-sm" href="code/ceshi.html">测试</a>
 				</div>		
 			</div>
 		</section>		
@@ -535,7 +532,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<p>Copyright &copy; 2015.Company name All rights reserved</p>
+						<p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
 					</div>
 				</div>
 			</div>
